# sdl2-android-base

./: .gitignore  .gitmodules  README.md  settings.gradle
app/: build.gradle
app/jni/: CMakeLists.txt
app/jni/include/: main.h
app/jni/src/: main.cpp
